Just need to fix -- and make it positive

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- favicon -->
-    <link rel="NUMBERS-FAVICON" sizes="180x180" href="./fav_index/NUMBERS-FAVICON.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/NUMBERS-FAVICON.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/NUMBERS-FAVICON.png" />
+    <link rel="Numbers-favicon" sizes="180x180" href="./fav_index/Numbers-favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/Numbers-favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/Numbers-favicon.png" />
 
     <!-- Misc style -->
     <link rel="manifest" href="./fav_index/site.webmanifest" />
@@ -53,8 +53,8 @@
       
       <!-- image -->
       <center>
-        <img src="./fav_index/NUMBERS-PICTURE.jpg"
-        width= "900px"
+        <img src="./fav_index/Numbers-page.jpg"
+        width= "600px"
         height= "auto">
       </center>
 
@@ -71,7 +71,6 @@
             type="number"
             step="1"
             id="int-1-Here"
-            placeholder="Numbers go here..."
           />          
           <label class="mdl-textfield__label" for="int-1-Here">Numbers go here...</label>
           <span class="mdl-textfield__error">Please insert a number with no decimals</span>
