--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <center><p>Please insert your first number below:</p></center>
     
-      <!-- min textbox -->
+      <!-- int1 textbox -->
       <center>
         <div class="mdl-textfield mdl-js-textfield">
           <input
@@ -78,7 +78,7 @@
 
         <center><p>Please insert your second number below:</p></center>
         
-      <!-- max textbox -->
+      <!-- int2 textbox -->
         <div class="mdl-textfield mdl-js-textfield">
           <input
             class="mdl-textfield__input"
